<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="br.com.simplepass.simplepassnew.login.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_phone_number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <br.com.simplepass.loading_button_lib.CircularProgressButton
        android:id="@+id/loginBtnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_marginBottom="2dp"
        android:text="@string/button_enter"/>

    <Button
        android:id="@+id/loginBtnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_marginBottom="2dp"
        android:text="@string/button_recover_password"/>

    <Button
        android:id="@+id/loginBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/button_register"/>

</LinearLayout>
